--- a/Desarrollador/desarrollador.html
+++ b/Desarrollador/desarrollador.html
@@ -34,10 +34,10 @@
           </button>
         </div>
         <div>
-          <a class="navbar-brand brand-logo" href="index.html">
+          <a class="navbar-brand brand-logo" href="desarrollador.html">
             <img src="images/logo.svg" alt="logo" />
           </a>
-          <a class="navbar-brand brand-logo-mini" href="index.html">
+          <a class="navbar-brand brand-logo-mini" href="desarrollador.html">
             <img src="images/logo-mini.svg" alt="logo" />
           </a>
         </div>
@@ -45,8 +45,8 @@
       <div class="navbar-menu-wrapper d-flex align-items-top"> 
         <ul class="navbar-nav">
           <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold">John Doe</span></h1>
-            <h3 class="welcome-sub-text">Your performance summary this week </h3>
+            <h1 class="welcome-text">Bienvenido <span class="text-black fw-bold">Juan</span></h1>
+            <h3 class="welcome-sub-text">Tu resumen de rendimiento esta semana</h3>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
@@ -1194,8 +1194,7 @@
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
           <div class="d-sm-flex justify-content-center justify-content-sm-between">
-            <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Premium <a href="https://www.bootstrapdash.com/" target="_blank">Bootstrap admin template</a> from BootstrapDash.</span>
-            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Copyright © 2021. All rights reserved.</span>
+            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Todos los derechos reservados.</span>
           </div>
         </footer>
         <!-- partial -->
