--- a/Proyecto/desarrollador.html
+++ b/Proyecto/desarrollador.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>Titulo</title>
+    <title>Administrador</title>
 </head>
 <body class="bg-light">
     <div class="d-flex">
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow flex-column vh-100 p-3" style="width: 250px;">
             <a class="navbar-brand mb-4" href="desarrollador.html">
-                <img src="" alt="logo" height="30" class="rounded">
+                <img src="imagenes/logo.png" alt="logo" class="img-fluid" style="max-width: x; height: auto;">
             </a>
             <div class="mb-4 text-center">
                 <img src="images/faces/face8.jpg" class="rounded-circle border mb-2" height="50">
@@ -46,7 +46,189 @@
             </ul>
         </nav>
         <div class="flex-grow-1 p-4 bg-white shadow rounded">
-
+            <h2 class="mb-4">Tienda</h2>
+            <div class="row g-4">
+            <div class="col-md-3">
+                <div class="card text-center shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-secondary">Productos</h5>
+                    <p class="fs-1 fw-bold text-primary btn">128</p>
+                    <small class="text-muted">Total registrados</small>
+                </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-secondary">Usuarios</h5>
+                    <p class="fs-1 fw-bold text-primary btn">54</p>
+                    <small class="text-muted">Clientes activos</small>
+                </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-secondary">Ventas Hoy</h5>
+                    <p class="fs-1 fw-bold text-success btn">23</p>
+                    <small class="text-muted">Transacciones</small>
+                </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card text-center shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title text-secondary">Ingresos Hoy</h5>
+                    <p class="fs-1 fw-bold text-success btn">$85.000</p>
+                    <small class="text-muted">CLP</small>
+                </div>
+                </div>
+            </div>
+            </div>
+            <div class="row mt-5">
+            <div class="col-md-6">
+                <div class="card shadow-sm mb-4">
+                    <div class="card-header bg-primary text-white">
+                        <i class="bi bi-bell"></i> Notificaciones
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><span class="badge bg-info me-2">Nuevo</span> Se ha registrado un nuevo usuario.</li>
+                        <li class="list-group-item"><span class="badge bg-warning me-2">Alerta</span> Stock bajo en producto #123.</li>
+                        <li class="list-group-item"><span class="badge bg-success me-2">Venta</span> Venta realizada por $12.000 CLP.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-sm mb-4">
+                    <div class="card-header bg-success text-white">
+                        <i class="bi bi-list-task"></i> Tareas Pendientes
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><input class="form-check-input me-2" type="checkbox"> Revisar productos sin stock</li>
+                        <li class="list-group-item"><input class="form-check-input me-2" type="checkbox"> Responder mensajes de clientes</li>
+                        <li class="list-group-item"><input class="form-check-input me-2" type="checkbox"> Actualizar precios de productos</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-sm mb-4" style="height: 410px;">
+                    <div class="card-header bg-secondary text-white d-flex align-items-center justify-content-between">
+                        <span><i class="bi bi-calendar-event"></i> Próximos Eventos</span>
+                    </div>
+                    <table class="table table-hover align-middle mb-0">
+                        <thead class="table-light" style="position: sticky; top: 0; z-index: 2;"></thead></thead>
+                            <tr>
+                                <th style="width: 120px;">Tipo</th>
+                                <th>Evento</th>
+                                <th style="width: 120px;">Fecha</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <div style="height: 340px; overflow-y: auto; scrollbar-width: thin;">
+                        <table class="table table-hover align-middle mb-0">
+                            <tbody>
+                                <tr>
+                                    <td><span class="badge bg-primary">Reunión</span></td>
+                                    <td>Reunión de equipo</td>
+                                    <td>10/06/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-success">Lanzamiento</span></td>
+                                    <td>Lanzamiento de nueva colección</td>
+                                    <td>15/06/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-info">Capacitación</span></td>
+                                    <td>Capacitación de ventas</td>
+                                    <td>20/06/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-danger">Inventario</span></td>
+                                    <td>Revisión de inventario</td>
+                                    <td>28/06/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-secondary">Networking</span></td>
+                                    <td>Sesión de networking</td>
+                                    <td>30/06/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-dark">Demo</span></td>
+                                    <td>Demostración de producto</td>
+                                    <td>02/07/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-warning">Auditoría</span></td>
+                                    <td>Auditoría interna</td>
+                                    <td>05/07/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-primary">Presentación</span></td>
+                                    <td>Presentación de resultados trimestrales</td>
+                                    <td>10/07/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-success">Capacitación</span></td>
+                                    <td>Capacitación en atención al cliente</td>
+                                    <td>15/07/2024</td>
+                                </tr>
+                                <tr>
+                                    <td><span class="badge bg-info">Reunión</span></td>
+                                    <td>Reunión con proveedores</td>
+                                    <td>18/07/2024</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card shadow-sm mb-4" style="height: 410px;">
+                    <div class="card-header bg-dark text-white">
+                        <i class="bi bi-bar-chart-line"></i> Información General
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <span class="fw-bold text-secondary">Resumen de actividad</span>
+                        </div>
+                        <ul class="list-group list-group-flush mb-3">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Nuevos clientes hoy
+                                <span class="badge bg-success rounded-pill">5</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Productos vendidos hoy
+                                <span class="badge bg-primary rounded-pill">23</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Mensajes sin leer
+                                <span class="badge bg-warning rounded-pill">8</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Pedidos pendientes
+                                <span class="badge bg-danger rounded-pill">2</span>
+                            </li>
+                        </ul>
+                        <div class="mt-4">
+                            <span class="fw-bold text-secondary">Indicadores rápidos</span>
+                            <div class="d-flex justify-content-between mt-2">
+                                <div class="text-center">
+                                    <div class="fs-4 fw-bold text-primary">85%</div>
+                                    <small class="text-muted">Satisfacción</small>
+                                </div>
+                                <div class="text-center">
+                                    <div class="fs-4 fw-bold text-success">97%</div>
+                                    <small class="text-muted">Entrega a tiempo</small>
+                                </div>
+                                <div class="text-center">
+                                    <div class="fs-4 fw-bold text-info">12</div>
+                                    <small class="text-muted">Nuevos mensajes</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
